implement projects.html view

--- a/projects.html
+++ b/projects.html
@@ -47,14 +47,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link waves-effect js-scroll-trigger" href="#page-top">Games<span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link waves-effect" href="index.html">Games</a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect" href="about.html">About us</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link waves-effect" href="projects.html">Projects</a>
+            <li class="nav-item active">
+              <a class="nav-link waves-effect js-scroll-trigger" href="#page-top">Projects<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect" href="services.html">Services</a>
@@ -159,7 +159,7 @@
         <!-- Section: Projects Content -->
         <section class="text-white text-center">
 
-          <h3 class="font-weight-bold mb-4 pb-2">Our best projects</h3>
+          <h3 class="font-weight-bold mb-4 pb-2">Our current projects</h3>
           <p class="text-white-50 w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur
             veniam.
           </p>
@@ -171,7 +171,7 @@
             <div class="col-md-6 mb-4">
 
               <div class="view overlay rounded z-depth-1">
-                <img src="https://mdbootstrap.com/img/Photos/Others/laptop-sm.jpg" class="img-fluid" alt="Sample project image">
+                <img src="img/projects/loteria.jpg" class="img-fluid" alt="Sample project image">
                 <a>
                   <div class="mask rgba-white-slight"></div>
                 </a>
@@ -179,9 +179,9 @@
 
               <div class="px-3 pt-3 mx-1 mt-1 pb-0">
                 <a class="orange-text">
-                  <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-chart-line pr-2"></i>Marketing</h6>
+                  <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-chart-line pr-2"></i>Game</h6>
                 </a>
-                <h4 class="font-weight-bold text-white mb-3">Title of the news</h4>
+                <h4 class="font-weight-bold text-white mb-3">Lottery Game</h4>
                 <p class="text-white-50">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, adipisci velit cupidatat proident voluptatem quia numquam.</p>
                 <a class="btn btn-success btn-rounded btn-md"> View more</a>
               </div>
