--- a/projects.html
+++ b/projects.html
@@ -179,11 +179,11 @@
 
               <div class="px-3 pt-3 mx-1 mt-1 pb-0">
                 <a class="orange-text">
-                  <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-chart-line pr-2"></i>Game</h6>
+                  <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-gamepad pr-2"></i>Game</h6>
                 </a>
                 <h4 class="font-weight-bold text-white mb-3">Lottery Game</h4>
                 <p class="text-white-50">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, adipisci velit cupidatat proident voluptatem quia numquam.</p>
-                <a class="btn btn-success btn-rounded btn-md"> View more</a>
+                <a class="btn btn-danger btn-rounded btn-md"> View more</a>
               </div>
 
             </div>
@@ -193,7 +193,7 @@
             <div class="col-md-6 mb-4">
 
               <div class="view overlay rounded z-depth-1">
-                <img src="https://mdbootstrap.com/img/Photos/Others/images/19.jpg" class="img-fluid" alt="Sample project image">
+                <img src="img/projects/nekketsu-battle.jpg" class="img-fluid" alt="Sample project image">
                 <a>
                   <div class="mask rgba-white-slight"></div>
                 </a>
@@ -201,11 +201,11 @@
 
               <div class="px-3 pt-3 mx-1 mt-1 pb-0">
                 <a class="blue-text">
-                  <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-eye pr-2"></i>Entertainment</h6>
+                  <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-gamepad pr-2"></i>Movil Game</h6>
                 </a>
-                <h4 class="font-weight-bold text-white mb-3">Title of the news</h4>
+                <h4 class="font-weight-bold text-white mb-3">Nekketsu Battle</h4>
                 <p class="text-white-50">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam nisi ut aliquid, aspernatur aut odit aut fugit.</p>
-                <a class="btn btn-success btn-rounded btn-md"> View more</a>
+                <a class="btn btn-default btn-rounded btn-md"> View more</a>
               </div>
 
             </div>
