implement projects.html view

--- a/projects.html
+++ b/projects.html
@@ -158,9 +158,9 @@
 
         <!-- Section: Projects Content -->
         <section class="text-white text-center">
-
+          <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">Projects</h6>
           <h3 class="font-weight-bold mb-4 pb-2">Our current projects</h3>
-          <p class="text-white-50 w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur
+          <p class="lead text-white-50 w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur
             veniam.
           </p>
 
@@ -182,8 +182,11 @@
                   <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-gamepad pr-2"></i>Game</h6>
                 </a>
                 <h4 class="font-weight-bold text-white mb-3">Lottery Game</h4>
-                <p class="text-white-50">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, adipisci velit cupidatat proident voluptatem quia numquam.</p>
-                <a class="btn btn-danger btn-rounded btn-md"> View more</a>
+                <p class="text-white-50">The lottery game is a typical Mexican game that consists of 54 cards
+                  and an indefinite number of cards called "tables" with 16 of said cards chosen randomly.
+                  Every time a card is drawn, it is announced and the participants must mark that card in their
+                  table if they have it, the first player to mark all the cards in his table wins the game.</p>
+                <a class="btn btn-outline-lottery btn-md"> View more</a>
               </div>
 
             </div>
@@ -204,8 +207,12 @@
                   <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-gamepad pr-2"></i>Movil Game</h6>
                 </a>
                 <h4 class="font-weight-bold text-white mb-3">Nekketsu Battle</h4>
-                <p class="text-white-50">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam nisi ut aliquid, aspernatur aut odit aut fugit.</p>
-                <a class="btn btn-default btn-rounded btn-md"> View more</a>
+                <p class="text-white-50">It is a battle royale game in which each player appears at different
+                  points on the map and has to annihilate the other participants with weapons of different types,
+                  using strategies such as hiding in the environment, camouflaging himself or even obtaining
+                  equipment that is in the area, and all this in kawaii style with small but dangerous characters
+                  ready to be number one in the world ranking.</p>
+                <a class="btn btn-outline-nekketsu btn-md"> View more</a>
               </div>
 
             </div>
