implement projects.html view

--- a/projects.html
+++ b/projects.html
@@ -179,13 +179,14 @@
 
               <div class="px-3 pt-3 mx-1 mt-1 pb-0">
                 <a class="orange-text">
-                  <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-gamepad pr-2"></i>Game</h6>
+                  <h6 class="font-weight-bold mt-2 mb-3"><i class="fas fa-gamepad pr-2"></i>Multi-platform Game</h6>
                 </a>
                 <h4 class="font-weight-bold text-white mb-3">Lottery Game</h4>
                 <p class="text-white-50">The lottery game is a typical Mexican game that consists of 54 cards
                   and an indefinite number of cards called "tables" with 16 of said cards chosen randomly.
-                  Every time a card is drawn, it is announced and the participants must mark that card in their
-                  table if they have it, the first player to mark all the cards in his table wins the game.</p>
+                  Every time a card is flipped, it is announced and the participants must mark that card in their
+                  table if they have it, but be careful!! if you do not mark your card when you must you cannot win
+                  the game, the first player to mark all the cards on their table wins the game.</p>
                 <a class="btn btn-outline-lottery btn-md"> View more</a>
               </div>
 
