--- a/projects.html
+++ b/projects.html
@@ -160,9 +160,10 @@
         <section class="text-white text-center">
           <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">Projects</h6>
           <h3 class="font-weight-bold mb-4 pb-2">Our current projects</h3>
-          <p class="lead text-white-50 w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur
-            veniam.
-          </p>
+          <p class="lead text-white-50 w-responsive mx-auto mb-5">These are the projects that we have still in development
+            for some of our clients, but we invite you to take a look at them and learn more about them, also some of these
+            projects that we show you are of our own creation and property of SouFUN studio since we like to be in constant
+            development of some other fun game that we can think of.</p>
 
           <!-- Grid row -->
           <div class="row">
@@ -188,7 +189,7 @@
                   table if they have it, but be careful!! if you do not mark your card when you must you cannot win
                   the game, the first player to mark all the cards on their table wins the game.</p>
                 <!-- Button trigger modal -->
-                <a class="btn btn-outline-lottery btn-md" data-toggle="modal" data-target="#lotteryModal"> View more</a>
+                <a class="btn btn-outline-lottery btn-md" data-toggle="modal" data-target="#lotteryModal" onclick="countdown(83);"> View more</a>
               </div>
 
             </div>
@@ -229,13 +230,11 @@
 
 
 
-      <!-- Central Modal Small -->
+      <!-- Central Modal -->
       <div class="modal fade" id="lotteryModal" tabindex="-1" role="dialog" aria-labelledby="lotteryLabel" aria-hidden="true">
 
         <!-- Change class .modal-sm to change the size of the modal -->
         <div class="modal-dialog modal-fluid" role="document">
-
-
           <div class="modal-content">
             <div class="modal-header">
               <h4 class="modal-title w-100" id="lotteryLabel">Lottery Game</h4>
@@ -244,7 +243,46 @@
               </button>
             </div>
             <div class="modal-body">
-              ...
+              <!-- Full Page Intro -->
+              <div class="view">
+                <video class="video-intro" poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
+                  <source src="https://mdbootstrap.com/img/video/Lines-min.mp4" type="video/mp4">
+                </video>
+
+                <!-- Mask & flexbox options-->
+                <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+
+                  <!-- Content -->
+                  <div class="text-center white-text mx-5 wow fadeIn">
+
+                    <h1 class="display-4 mb-4">
+                      <strong>Coming Soon!</strong>
+                    </h1>
+
+                    <!-- Time Counter -->
+                    <p id="time-counter" class="border border-light my-4"></p>
+
+
+                    <h4 class="mb-4">
+                      <strong>We're working hard to finish the development of this site. </strong>
+                    </h4>
+
+                    <h4 class="mb-4 d-none d-md-block">
+                      <strong>Until then have a look at our Free Bootstrap 4 tutorials</strong>
+                    </h4>
+
+                    <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Start
+                      free tutorial
+                      <i class="fas fa-graduation-cap ml-2"></i>
+                    </a>
+                  </div>
+                  <!-- Content -->
+
+                </div>
+                <!-- Mask & flexbox options-->
+
+              </div>
+              <!-- Full Page Intro -->
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
@@ -252,7 +290,7 @@
           </div>
         </div>
       </div>
-      <!-- Central Modal Small -->
+      <!-- Central Modal -->
 
 
 
@@ -369,6 +407,7 @@
   <script type="text/javascript" src="js/jquery.easing.min.js"></script>
   <!-- Custom scripts (optional) -->
   <script type="text/javascript" src="js/new-age.min.js"></script>
+  <script type="text/javascript" src="js/countdown.js"></script>
 
   <!--Modal: modalCookie-->
   <div class="modal fade bottom cookieModal" id="cookieModal" tabindex="-1" role="dialog" aria-labelledby="cookieModalLabel" aria-hidden="true" data-backdrop="true">
