implement projects.html view

--- a/projects.html
+++ b/projects.html
@@ -234,7 +234,7 @@
       <div class="modal fade" id="lotteryModal" tabindex="-1" role="dialog" aria-labelledby="lotteryLabel" aria-hidden="true">
 
         <!-- Change class .modal-sm to change the size of the modal -->
-        <div class="modal-dialog modal-fluid" role="document">
+        <div class="modal-dialog modal-fluid modal-dialog-scrollable" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h4 class="modal-title w-100" id="lotteryLabel">Lottery Game</h4>
@@ -261,26 +261,16 @@
 
                     <!-- Time Counter -->
                     <p id="time-counter" class="border border-light my-4"></p>
-
-
-                    <h4 class="mb-4">
-                      <strong>We're working hard to finish the development of this site. </strong>
-                    </h4>
-
-                    <h4 class="mb-4 d-none d-md-block">
-                      <strong>Until then have a look at our Free Bootstrap 4 tutorials</strong>
-                    </h4>
-
+                    <h4 class="mb-4"><strong>We're working hard to finish the development of this site.</strong></h4>
+                    <h4 class="mb-4 d-none d-md-block"><strong>Until then have a look at our Free Bootstrap 4 tutorials</strong></h4>
                     <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Start
                       free tutorial
                       <i class="fas fa-graduation-cap ml-2"></i>
                     </a>
                   </div>
                   <!-- Content -->
-
                 </div>
                 <!-- Mask & flexbox options-->
-
               </div>
               <!-- Full Page Intro -->
             </div>
