implement projects.html view

--- a/projects.html
+++ b/projects.html
@@ -255,9 +255,7 @@
                   <!-- Content -->
                   <div class="text-center white-text mx-5 wow fadeIn">
 
-                    <h1 class="display-4 mb-4">
-                      <strong>Coming Soon!</strong>
-                    </h1>
+                    <h1 class="display-4 mb-4"><strong>Coming Soon!</strong></h1>
 
                     <!-- Time Counter -->
                     <p id="time-counter" class="border border-light my-4"></p>
