implement projects.html view

--- a/projects.html
+++ b/projects.html
@@ -244,32 +244,32 @@
             </div>
             <div class="modal-body">
               <!-- Full Page Intro -->
+              <div class="view">
+                <video class="video-intro" poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
+                  <source src="https://mdbootstrap.com/img/video/Lines-min.mp4" type="video/mp4">
+                </video>
 
-              <video class="video-intro" poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
-                <source src="https://mdbootstrap.com/img/video/Lines-min.mp4" type="video/mp4">
-              </video>
+                <!-- Mask & flexbox options-->
+                <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
 
-              <!-- Mask & flexbox options-->
-              <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+                  <!-- Content -->
+                  <div class="text-center white-text mx-5 wow fadeIn">
 
-                <!-- Content -->
-                <div class="text-center white-text mx-5 wow fadeIn">
+                    <h1 class="display-4 mb-4"><strong>Coming Soon!</strong></h1>
 
-                  <h1 class="display-4 mb-4"><strong>Coming Soon!</strong></h1>
-
-                  <!-- Time Counter -->
-                  <p id="time-counter" class="border border-light my-4"></p>
-                  <h4 class="mb-4"><strong>We're working hard to finish the development of this site.</strong></h4>
-                  <h4 class="mb-4 d-none d-md-block"><strong>Until then have a look at our Free Bootstrap 4 tutorials</strong></h4>
-                  <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Start
-                    free tutorial
-                    <i class="fas fa-graduation-cap ml-2"></i>
-                  </a>
+                    <!-- Time Counter -->
+                    <p id="time-counter" class="border border-light my-4"></p>
+                    <h4 class="mb-4"><strong>We're working hard to finish the development of this site.</strong></h4>
+                    <h4 class="mb-4 d-none d-md-block"><strong>Until then have a look at our Free Bootstrap 4 tutorials</strong></h4>
+                    <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Start
+                      free tutorial
+                      <i class="fas fa-graduation-cap ml-2"></i>
+                    </a>
+                  </div>
+                  <!-- Content -->
                 </div>
-                <!-- Content -->
+                <!-- Mask & flexbox options-->
               </div>
-              <!-- Mask & flexbox options-->
-
               <!-- Full Page Intro -->
             </div>
             <div class="modal-footer">
