--- a/projects.html
+++ b/projects.html
@@ -189,7 +189,7 @@
                   table if they have it, but be careful!! if you do not mark your card when you must you cannot win
                   the game, the first player to mark all the cards on their table wins the game.</p>
                 <!-- Button trigger modal -->
-                <a class="btn btn-outline-lottery btn-md" data-toggle="modal" data-target="#lotteryModal" onclick="countdown(83);"> View more</a>
+                <a class="btn btn-outline-lottery btn-md" data-toggle="modal" data-target="#projectModal" onclick="countdown(82);"> View more</a>
               </div>
 
             </div>
@@ -215,7 +215,7 @@
                   using strategies such as hiding in the environment, camouflaging himself or even obtaining
                   equipment that is in the area, and all this in kawaii style with small but dangerous characters
                   ready to be number one in the world ranking.</p>
-                <a class="btn btn-outline-nekketsu btn-md"> View more</a>
+                <a class="btn btn-outline-nekketsu btn-md" data-toggle="modal" data-target="#projectModal" onclick="countdown(155);"> View more</a>
               </div>
 
             </div>
@@ -227,17 +227,14 @@
       </div>
       <!-- Grid row -->
 
-
-
-
       <!-- Central Modal -->
-      <div class="modal fade" id="lotteryModal" tabindex="-1" role="dialog" aria-labelledby="lotteryLabel" aria-hidden="true">
+      <div class="modal fade" id="projectModal" tabindex="-1" role="dialog" aria-labelledby="projectLabel" aria-hidden="true">
 
         <!-- Change class .modal-sm to change the size of the modal -->
         <div class="modal-dialog modal-fluid modal-dialog-scrollable" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title w-100" id="lotteryLabel">Lottery Game</h4>
+              <h4 class="modal-title w-100" id="projectLabel">Lottery Game</h4>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -245,18 +242,14 @@
             <div class="modal-body">
               <!-- Full Page Intro -->
               <div class="view">
-                <video class="video-intro" poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
+                <video class="embed-responsive-item" poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
                   <source src="https://mdbootstrap.com/img/video/Lines-min.mp4" type="video/mp4">
                 </video>
-
                 <!-- Mask & flexbox options-->
                 <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-
                   <!-- Content -->
                   <div class="text-center white-text mx-5 wow fadeIn">
-
                     <h1 class="display-4 mb-4"><strong>Coming Soon!</strong></h1>
-
                     <!-- Time Counter -->
                     <p id="time-counter" class="border border-light my-4"></p>
                     <h4 class="mb-4"><strong>We're working hard to finish the development of this site.</strong></h4>
@@ -273,7 +266,7 @@
               <!-- Full Page Intro -->
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-close-modal btn-sm" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
