implement projects.html view

--- a/projects.html
+++ b/projects.html
@@ -252,7 +252,7 @@
                     <h1 class="display-4 mb-4"><strong>Coming Soon!</strong></h1>
                     <div id="clock-a" class="countdown-circles d-flex flex-wrap justify-content-center pt-4"></div>
                     <h4 class="mb-4 pt-4"><strong>We're working hard to finish the development of this game.</strong></h4>
-                    <h4 class="mb-4 d-none d-md-block"><strong>Until then have a look at our other projects.</strong></h4>
+                    <h4 class="mb-4 d-md-block"><strong>Until then have a look at our other projects.</strong></h4>
                   </div>
                   <!-- Content -->
                 </div>
@@ -293,7 +293,7 @@
                     <h1 class="display-4 mb-4"><strong>Coming Soon!</strong></h1>
                     <div id="clock-b" class="countdown-circles d-flex flex-wrap justify-content-center pt-4"></div>
                     <h4 class="mb-4 pt-4"><strong>We're working hard to finish the development of this game.</strong></h4>
-                    <h4 class="mb-4 d-none d-md-block"><strong>Until then have a look at our other projects.</strong></h4>
+                    <h4 class="mb-4 d-md-block"><strong>Until then have a look at our other projects.</strong></h4>
                   </div>
                   <!-- Content -->
                 </div>
