implement projects.html view

--- a/projects.html
+++ b/projects.html
@@ -242,7 +242,7 @@
               <!-- Body Modal -->
               <div class="view">
                 <video class="embed-responsive-item" poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
-                  <source src="https://mdbootstrap.com/img/video/Lines-min.mp4" type="video/mp4">
+                  <source src="video/Lines-min.webm" type="video/webm">
                 </video>
                 <!-- Mask & flexbox options-->
                 <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
@@ -283,7 +283,7 @@
               <!-- Body Modal -->
               <div class="view">
                 <video class="embed-responsive-item" poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
-                  <source src="https://mdbootstrap.com/img/video/Lines-min.mp4" type="video/mp4">
+                  <source src="video/Lines-min.webm" type="video/webm">
                 </video>
                 <!-- Mask & flexbox options-->
                 <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
