implement terms_of_use.html view

--- a/frontend/commons/terms_of_use.html
+++ b/frontend/commons/terms_of_use.html
@@ -176,9 +176,12 @@
             <p class="text-left">For the purposes of these Terms and Conditions:</p>
 
             <ul class="text-left">
-              <li><strong>Affiliate:</strong>means an entity that controls, is controlled by or is under common control with a party, where "control"
+              <li><strong>Affiliate: </strong>means an entity that controls, is controlled by or is under common control with a party, where "control"
                 means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other
                 managing authority.
+              </li>
+              <li><strong>Company: </strong>(referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to SouFUN Studio, Av.
+                San Francisco Tlaltenco México, Cd. de México.
               </li>
             </ul>
 
