--- a/frontend/commons/terms_of_use.html
+++ b/frontend/commons/terms_of_use.html
@@ -168,20 +168,39 @@
 
             <h5 class="text-uppercase mb-4 pt-5"><strong>Interpretation</strong></h5>
 
-            <p class="text-left">The words of which the initial letter is capitalized have meanings defined under the following conditions.</p>
-            <p class="text-left">The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p>
+            <p class="text-left">The words of which the initial letter is capitalized have meanings defined
+              under the following conditions.</p>
+            <p class="text-left">The following definitions shall have the same meaning regardless of whether
+              they appear in singular or in plural.</p>
 
             <h5 class="text-uppercase mb-4 pt-5"><strong>Definitions</strong></h5>
 
             <p class="text-left">For the purposes of these Terms and Conditions:</p>
 
             <ul class="text-left">
-              <li><strong>Affiliate: </strong>means an entity that controls, is controlled by or is under common control with a party, where "control"
-                means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other
-                managing authority.
+              <li>
+                <strong>Affiliate: </strong>means an entity that controls, is controlled by or is under common
+                control with a party, where "control" means ownership of 50% or more of the shares, equity interest
+                or other securities entitled to vote for election of directors or other managing authority.
               </li>
-              <li><strong>Company: </strong>(referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to SouFUN Studio, Av.
-                San Francisco Tlaltenco México, Cd. de México.
+              <li>
+                <strong>Company </strong>(referred to as either "the Company", "We", "Us" or "Our" in this Agreement)
+                refers to SouFUN Studio, Av. San Francisco Tlaltenco México, Cd. de México.
+              </li>
+              <li>
+                <strong>Service </strong>refers to the Website.
+              </li>
+              <li>
+                <strong>Terms and Conditions </strong>(also referred as "Terms") mean these Terms and Conditions that
+                form the entire agreement between You and the Company regarding the use of the Service.
+              </li>
+              <li>
+                <strong>Third-party Social Media Service </strong>means any services or content (including data, information,
+                products or services) provided by a third-party that may be displayed, included or made available by the Service.
+              </li>
+              <li>
+                <strong>Website </strong>refers to SouFUN Studio, accessible from
+                <a href="http://www.soufunstudio.com" class="text-white badge badge-primary text-wrap">www.soufunstudio.com</a>
               </li>
             </ul>
 
