--- a/frontend/commons/terms_of_use.html
+++ b/frontend/commons/terms_of_use.html
@@ -202,58 +202,157 @@
                 <strong>Website </strong>refers to SouFUN Studio, accessible from
                 <a href="http://www.soufunstudio.com" class="text-white badge badge-primary text-wrap">www.soufunstudio.com</a>
               </li>
+              <li>
+                <strong>You </strong>means the individual accessing or using the Service, or the company, or other legal entity
+                on behalf of which such individual is accessing or using the Service, as applicable.
+              </li>
             </ul>
 
-            <h3 class="text-uppercase mb-4 pt-5"><strong>use of collected information</strong></h3>
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Acknowledgment</strong></h3>
 
-            <p class="text-left">Our website uses the information to provide the best possible service,
-              particularly to keep track of users, orders if applicable, and to improve our products and services.
-              It is possible that emails may be sent periodically through our site with special offers, new products
-              and other advertising information that we consider relevant to you or that may provide you with benefits,
-              these emails will be sent to the address that you provide and may be canceled anytime.</p>
+            <p class="text-left">These are the Terms and Conditions governing the use of this Service and the agreement that
+              operates between You and the Company. These Terms and Conditions set out the rights and obligations of all
+              users regarding the use of the Service.</p>
 
-            <p class="text-left">SouFUN Studio is highly committed to fulfilling the commitment to keep
-              your information secure. We use the most advanced systems and constantly update them to ensure that there
-              is no unauthorized access.</p>
+            <p class="text-left">Your access to and use of the Service is conditioned on Your acceptance of and compliance
+              with these Terms and Conditions. These Terms and Conditions apply to all visitors, users and others who access
+              or use the Service.</p>
 
-            <h3 class="text-uppercase mb-4 pt-5"><strong>cookies</strong></h3>
+            <p class="text-left">By accessing or using the Service You agree to be bound by these Terms and Conditions. If
+              You disagree with any part of these Terms and Conditions then You may not access the Service.</p>
 
-            <p class="text-left">A cookie refers to a file that is sent with the purpose of requesting
-              permission to be stored on your computer. By accepting this file, the cookie is created and then serves
-              to have information regarding web traffic, and also facilitates future visits to a website. recurrent.
-              Another function that cookies have is that with them the websites can recognize you individually and
-              therefore provide you with the best personalized service on their website.</p>
+            <p class="text-left">You represent that you are over the age of 18. The Company does not permit those under 18 to use the Service.</p>
 
-            <p class="text-left">Our website uses cookies to identify the pages that are visited and
-              their frequency. This information is used only for statistical analysis and then the information is
-              permanently removed. You can delete cookies at any time from your computer. However, cookies help to
-              provide a better service for the websites, you do not give access to information from your computer
-              or from you, unless you want it and provide it directly, <a href="https://brightononline.ca/es/" target="_blank" class="badge badge-primary text-wrap">visits to a website</a>.
-              You can accept or deny the use of cookies, however most browsers accept cookies automatically as it
-              serves to have a better web service. You can also change the settings on your computer to decline cookies.
-              If they are declined you may not be able to use some of our services.</p>
+            <p class="text-left">Your access to and use of the Service is also conditioned on Your acceptance of and compliance
+              with the Privacy Policy of the Company. Our Privacy Policy describes Our policies and procedures on the collection,
+              use and disclosure of Your personal information when You use the Application or the Website and tells You about Your
+              privacy rights and how the law protects You. Please read Our Privacy Policy carefully before using Our Service.</p>
 
-            <h3 class="text-uppercase mb-4 pt-5"><strong>links to third parties</strong></h3>
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Links to Other Websites</strong></h3>
 
-            <p class="text-left">This website and / or the SouFUN Studio applications may contain
-              links to other sites that may be of interest to you. Once you click on these links and leave our page,
-              we no longer have control over the site you are redirected to and therefore we are not responsible for
-              the terms or privacy or the protection of your data on those other third party sites. These sites are
-              subject to their own privacy policies, so it is recommended that you consult them to confirm that you
-              agree with them.</p>
+            <p class="text-left">Our Service may contain links to third-party web sites or services that are not owned or controlled by the Company.</p>
 
-            <h3 class="text-uppercase mb-4 pt-5"><strong>control of your personal information</strong></h3>
+            <p class="text-left">The Company has no control over, and assumes no responsibility for, the content, privacy policies,
+              or practices of any third party web sites or services. You further acknowledge and agree that the Company shall not
+              be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in
+              connection with the use of or reliance on any such content, goods or services available on or through any such web sites or services.</p>
 
-            <p class="text-left">At any time you can restrict the collection or use of personal information
-              that is provided to our website and / or applications. Every time you are asked to fill out a form, such as
-              the user registration, you can check or uncheck the option to receive information by email. In case you have
-              checked the option to receive our newsletter or advertisement you can cancel it at any time.</p>
+            <p class="text-left">We strongly advise You to read the terms and conditions and privacy policies of any third-party web sites or services that You visit.</p>
 
-            <p class="text-left">This company will not sell, assign or distribute the personal information
-              that is collected without your consent, unless required by a judge with a court order.</p>
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Termination</strong></h3>
 
-            <p class="text-left">SouFUN Studio reserves the right to change the terms of this
-              Privacy Policy at any time.</p>
+            <p class="text-left">We may terminate or suspend Your access immediately, without prior notice or liability, for any
+              reason whatsoever, including without limitation if You breach these Terms and Conditions.</p>
+
+            <p class="text-left">Upon termination, Your right to use the Service will cease immediately.</p>
+
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Limitation of Liability</strong></h3>
+
+            <p class="text-left">Notwithstanding any damages that You might incur, the entire liability of the Company and any of
+              its suppliers under any provision of this Terms and Your exclusive remedy for all of the foregoing shall be limited
+              to the amount actually paid by You through the Service or 100 USD if You haven't purchased anything through the Service.</p>
+
+            <p class="text-left">To the maximum extent permitted by applicable law, in no event shall the Company or its suppliers
+              be liable for any special, incidental, indirect, or consequential damages whatsoever (including, but not limited to,
+              damages for loss of profits, loss of data or other information, for business interruption, for personal injury, loss
+              of privacy arising out of or in any way related to the use of or inability to use the Service, third-party software
+              and/or third-party hardware used with the Service, or otherwise in connection with any provision of this Terms), even
+              if the Company or any supplier has been advised of the possibility of such damages and even if the remedy fails of
+              its essential purpose.</p>
+
+            <p class="text-left">Some states do not allow the exclusion of implied warranties or limitation of liability for incidental
+              or consequential damages, which means that some of the above limitations may not apply. In these states, each party's
+              liability will be limited to the greatest extent permitted by law.</p>
+
+            <h3 class="text-uppercase mb-4 pt-5"><strong>"AS IS" and "AS AVAILABLE" Disclaimer</strong></h3>
+
+            <p class="text-left">The Service is provided to You "AS IS" and "AS AVAILABLE" and with all faults and defects without
+              warranty of any kind. To the maximum extent permitted under applicable law, the Company, on its own behalf and on
+              behalf of its Affiliates and its and their respective licensors and service providers, expressly disclaims all warranties,
+              whether express, implied, statutory or otherwise, with respect to the Service, including all implied warranties of
+              merchantability, fitness for a particular purpose, title and non-infringement, and warranties that may arise out of
+              course of dealing, course of performance, usage or trade practice. Without limitation to the foregoing, the Company
+              provides no warranty or undertaking, and makes no representation of any kind that the Service will meet Your requirements,
+              achieve any intended results, be compatible or work with any other software, applications, systems or services, operate
+              without interruption, meet any performance or reliability standards or be error free or that any errors or defects
+              can or will be corrected.</p>
+
+            <p class="text-left">Without limiting the foregoing, neither the Company nor any of the company's provider makes any
+              representation or warranty of any kind, express or implied: (i) as to the operation or availability of the Service,
+              or the information, content, and materials or products included thereon; (ii) that the Service will be uninterrupted
+              or error-free; (iii) as to the accuracy, reliability, or currency of any information or content provided through the
+              Service; or (iv) that the Service, its servers, the content, or e-mails sent from or on behalf of the Company are free
+              of viruses, scripts, trojan horses, worms, malware, timebombs or other harmful components.</p>
+
+            <p class="text-left">Some jurisdictions do not allow the exclusion of certain types of warranties or limitations on
+              applicable statutory rights of a consumer, so some or all of the above exclusions and limitations may not apply to You.
+              But in such a case the exclusions and limitations set forth in this section shall be applied to the greatest extent
+              enforceable under applicable law.</p>
+
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Governing Law</strong></h3>
+
+            <p class="text-left">The laws of the Country, excluding its conflicts of law rules, shall govern this Terms and Your
+              use of the Service. Your use of the Application may also be subject to other local, state, national, or international laws.</p>
+
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Disputes Resolution</strong></h3>
+
+            <p class="text-left">If You have any concern or dispute about the Service, You agree to first try to resolve the
+              dispute informally by contacting the Company.</p>
+
+            <h3 class="text-uppercase mb-4 pt-5"><strong>For European Union (EU) Users</strong></h3>
+
+            <p class="text-left">If You are a European Union consumer, you will benefit from any mandatory provisions of the law of
+              the country in which you are resident in.</p>
+
+            <h3 class="text-uppercase mb-4 pt-5"><strong>United States Legal Compliance</strong></h3>
+
+            <p class="text-left">You represent and warrant that (i) You are not located in a country that is subject to the United
+              States government embargo, or that has been designated by the United States government as a "terrorist supporting"
+              country, and (ii) You are not listed on any United States government list of prohibited or restricted parties.</p>
+
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Severability and Waiver</strong></h3>
+
+            <h5 class="text-uppercase mb-4 pt-5"><strong>Severability</strong></h5>
+
+            <p class="text-left">If any provision of these Terms is held to be unenforceable or invalid, such provision will be
+              changed and interpreted to accomplish the objectives of such provision to the greatest extent possible under
+              applicable law and the remaining provisions will continue in full force and effect.</p>
+
+            <h5 class="text-uppercase mb-4 pt-5"><strong>Waiver</strong></h5>
+
+            <p class="text-left">Except as provided herein, the failure to exercise a right or to require performance of an
+              obligation under this Terms shall not effect a party's ability to exercise such right or require such
+              performance at any time thereafter nor shall be the waiver of a breach constitute a waiver of any subsequent breach.</p>
+
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Translation Interpretation</strong></h3>
+
+            <p class="text-left">These Terms and Conditions may have been translated if We have made them available to You
+              on our Service. You agree that the original English text shall prevail in the case of a dispute.</p>
+
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Changes to These Terms and Conditions</strong></h3>
+
+            <p class="text-left">We reserve the right, at Our sole discretion, to modify or replace these Terms at any time.
+              If a revision is material We will make reasonable efforts to provide at least 30 days' notice prior to any new
+              terms taking effect. What constitutes a material change will be determined at Our sole discretion.</p>
+
+            <p class="text-left">By continuing to access or use Our Service after those revisions become effective, You agree
+              to be bound by the revised terms. If You do not agree to the new terms, in whole or in part, please stop using
+              the website and the Service.</p>
+
+            <h3 class="text-uppercase mb-4 pt-5"><strong>Contact Us</strong></h3>
+
+            <p class="text-left">If you have any questions about these Terms and Conditions, You can contact us:</p>
+
+            <ul class="text-left">
+              <li>By email: legal@soufunstudio.com</li>
+              <li>By visiting this page on our website:
+                <a class="text-white badge badge-primary text-wrap" href="http://www.soufunstudio.com/contact.html">
+                  www.soufunstudio.com/contact.html
+                </a>
+              </li>
+              <li>By phone number: 5515990967</li>
+            </ul>
+
 
           </div>
           <!-- Grid column -->
