--- a/frontend/commons/privacy_policy.html
+++ b/frontend/commons/privacy_policy.html
@@ -36,7 +36,7 @@
     <nav class="navbar fixed-top navbar-expand-lg px-5 navbar-dark elegant-color-dark scrolling-navbar" id="mainNav">
       <div class="container">
         <!-- Brand -->
-        <a class="navbar-brand waves-effect" href="#page-top">
+        <a class="navbar-brand waves-effect js-scroll-trigger" href="#page-top">
           <img src="/img/brand/soufunlogo-variant-2-icon.png" height="20" width="60" alt="brand">
         </a>
         <!-- Collapse -->
