implement terms_of_use.html view

--- a/frontend/commons/terms_of_use.html
+++ b/frontend/commons/terms_of_use.html
@@ -426,10 +426,10 @@
           <h5>SouFunStudio</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
-              <a class="js-scroll-trigger" href="#page-top">Privacy policy</a>
+              <a href="privacy_policy.html">Privacy policy</a>
             </li>
             <li>
-              <a href="terms_of_use.html">Terms of use</a>
+              <a class="js-scroll-trigger" href="#page-top">Terms of use</a>
             </li>
             <li>
               <a href="/contact.html">Sitemap</a>
