implement index.html view

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="preloader d-flex align-items-center justify-content-center">
       <div class="preloader-inner position-relative">
         <div class="preloader-circle"></div>
-        <div class="preloader-img pere-text">
-          <img src="img/brand/soufun-logo.png" alt="load-logo">
+        <div class="preloader-img">
+          <img src="img/brand/soufun-logo.png" alt="load-soufun-logo">
         </div>
       </div>
     </div>
