--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <!--? Preloader Start -->
+  <!-- Preloader Start -->
   <div id="preloader-active">
     <div class="preloader d-flex align-items-center justify-content-center">
       <div class="preloader-inner position-relative">
@@ -38,6 +38,8 @@
       </div>
     </div>
   </div>
+  <!-- Preloader Start -->
+
   <!-- Start of project here-->
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
