--- a/frontend/commons/privacy_policy.html
+++ b/frontend/commons/privacy_policy.html
@@ -27,6 +27,19 @@
 </head>
 
 <body>
+  <!-- Preloader Start -->
+  <div id="preloader-active">
+    <div class="preloader d-flex align-items-center justify-content-center">
+      <div class="preloader-inner position-relative">
+        <div class="preloader-circle"></div>
+        <div class="preloader-img">
+          <img src="img/brand/soufun-brand.png" alt="load-soufun-logo">
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Preloader Start -->
+
   <!-- Start of project here-->
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
