--- a/frontend/games/eduland_ar.html
+++ b/frontend/games/eduland_ar.html
@@ -29,6 +29,18 @@
 </head>
 
 <body>
+  <!-- Preloader Start -->
+  <div id="preloader-active">
+    <div class="preloader d-flex align-items-center justify-content-center">
+      <div class="preloader-inner position-relative">
+        <div class="preloader-circle"></div>
+        <div class="preloader-img">
+          <img src="img/brand/soufun-brand.png" alt="load-soufun-logo">
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Preloader Start -->
 
   <!-- Start of project here-->
   <div id="fb-root"></div>
