setting preloader in all views

--- a/frontend/commons/privacy_policy.html
+++ b/frontend/commons/privacy_policy.html
@@ -33,7 +33,7 @@
       <div class="preloader-inner position-relative">
         <div class="preloader-circle"></div>
         <div class="preloader-img">
-          <img src="img/brand/soufun-brand.png" alt="load-soufun-logo">
+          <img src="/img/brand/soufun-brand.png" alt="load-soufun-logo">
         </div>
       </div>
     </div>
@@ -362,6 +362,7 @@
   <script type="text/javascript" src="/js/jquery.easing.min.js"></script>
   <!-- Custom scripts (optional) -->
   <script type="text/javascript" src="/js/new-age.min.js"></script>
+  <script type="text/javascript" src="/js/yanger.js"></script>
 
 
 </body>
