--- a/projects.html
+++ b/projects.html
@@ -437,6 +437,7 @@
   <script type="text/javascript" src="js/jquery.easing.min.js"></script>
   <!-- Custom scripts (optional) -->
   <script type="text/javascript" src="js/new-age.min.js"></script>
+  <script type="text/javascript" src="js/yanger.js"></script>
   <script type="text/javascript" src="js/jquery.countdown.min.js"></script>
   <script type="text/javascript" src="js/countdown.js"></script>
 
