setting preloader in all views

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="preloader-inner position-relative">
         <div class="preloader-circle"></div>
         <div class="preloader-img">
-          <img src="img/brand/soufun-brand.png" class="animated rotateIn infinite" alt="load-soufun-logo">
+          <img src="img/brand/soufun-brand.png" class="spin" alt="load-soufun-logo">
         </div>
       </div>
     </div>
