setting preloader in all views

--- a/frontend/games/eduland_ar.html
+++ b/frontend/games/eduland_ar.html
@@ -35,7 +35,7 @@
       <div class="preloader-inner position-relative">
         <div class="preloader-circle"></div>
         <div class="preloader-img">
-          <img src="img/brand/soufun-brand.png" alt="load-soufun-logo">
+          <img src="img/brand/soufun-brand.png" class="spin-loader" alt="load-soufun-logo">
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link waves-effect" href="/index.html">Games</a>
             </li>
             <li class="nav-item">
