implement faqs.html view

--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -188,7 +188,7 @@
                 <div class="card border-top border-bottom-0 border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 border-light" role="tab" id="headingOne1">
+                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingOne1">
                     <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">
                       <h5 class="white-text font-weight-normal mb-0">
                         Is this a secure site for purchases? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -211,7 +211,7 @@
                 <div class="card border-bottom-0 border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom border-light" role="tab" id="headingTwo2">
+                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingTwo2">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2" aria-expanded="false" aria-controls="collapseTwo2">
                       <h5 class="white-text font-weight-normal mb-0">
                         How long are your contracts? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -221,7 +221,7 @@
 
                   <!-- Card body -->
                   <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2" data-parent="#accordionEx">
-                    <div class="card-body white-text">
+                    <div class="card-body elegant-color white-text">
                       Currently, we only offer monthly subscription. You can upgrade or cancel your monthly account at any time with no further obligation.
                     </div>
                   </div>
@@ -233,7 +233,7 @@
                 <div class="card border-bottom-0 border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom border-light" role="tab" id="headingThree3">
+                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingThree3">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3" aria-expanded="false" aria-controls="collapseThree3">
                       <h5 class="white-text font-weight-normal mb-0">
                         Can I cancel my subscription? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -243,7 +243,7 @@
 
                   <!-- Card body -->
                   <div id="collapseThree3" class="collapse" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
-                    <div class="card-body white-text">
+                    <div class="card-body elegant-color white-text">
                       You can cancel your subscription anytime in your account. Once the subscription is cancelled, you will not be charged next month. You will continue to have access to your account until your current subscription expires.
                     </div>
                   </div>
@@ -255,7 +255,7 @@
                 <div class="card border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom border-light" role="tab" id="headingThree4">
+                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingThree4">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree4" aria-expanded="false" aria-controls="collapseThree4">
                       <h5 class="white-text font-weight-normal mb-0">
                         Can I request refund? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -265,7 +265,7 @@
 
                   <!-- Card body -->
                   <div id="collapseThree4" class="collapse" role="tabpanel" aria-labelledby="headingThree4" data-parent="#accordionEx">
-                    <div class="card-body white-text">
+                    <div class="card-body elegant-color white-text">
                       Unfortunately, not. We do not issue full or partial refunds for any reason.
                     </div>
                   </div>
