implement faqs.html view

--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -255,7 +255,7 @@
                 <div class="card border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingThree4">
+                  <div class="card-header border-bottom z-depth-1 border-light teal lighten-2" role="tab" id="headingThree4">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree4" aria-expanded="false" aria-controls="collapseThree4">
                       <h5 class="white-text font-weight-normal mb-0">
                         Can I request refund? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -265,7 +265,7 @@
 
                   <!-- Card body -->
                   <div id="collapseThree4" class="collapse" role="tabpanel" aria-labelledby="headingThree4" data-parent="#accordionEx">
-                    <div class="card-body elegant-color white-text">
+                    <div class="card-body white-text rgba-grey-light cyan darken-3">
                       Unfortunately, not. We do not issue full or partial refunds for any reason.
                     </div>
                   </div>
