implement faqs.html view

--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -255,8 +255,8 @@
                 <div class="card border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingThree4">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree4" aria-expanded="false" aria-controls="collapseThree4">
+                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingFour4">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseFour4" aria-expanded="false" aria-controls="collapseFour4">
                       <h5 class="white-text font-weight-normal mb-0">
                         Can I request refund? <i class="fas fa-angle-down rotate-icon white-text"></i>
                       </h5>
@@ -264,9 +264,53 @@
                   </div>
 
                   <!-- Card body -->
-                  <div id="collapseThree4" class="collapse" role="tabpanel" aria-labelledby="headingThree4" data-parent="#accordionEx">
+                  <div id="collapseFour4" class="collapse" role="tabpanel" aria-labelledby="headingFour4" data-parent="#accordionEx">
                     <div class="card-body elegant-color white-text">
                       Unfortunately, not. We do not issue full or partial refunds for any reason.
+                    </div>
+                  </div>
+                  <!-- Card body -->
+                </div>
+                <!-- Accordion card -->
+
+                <!-- Accordion card -->
+                <div class="card border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingFive5">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseFive5" aria-expanded="false" aria-controls="collapseFive5">
+                      <h5 class="white-text font-weight-normal mb-0">
+                        What payment services do you support? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseFive5" class="collapse" role="tabpanel" aria-labelledby="headingFive5" data-parent="#accordionEx">
+                    <div class="card-body elegant-color white-text">
+                      We accept all major credit cards.
+                    </div>
+                  </div>
+                  <!-- Card body -->
+                </div>
+                <!-- Accordion card -->
+
+                <!-- Accordion card -->
+                <div class="card border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingSix6">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseSix6" aria-expanded="false" aria-controls="collapseSix6">
+                      <h5 class="white-text font-weight-normal mb-0">
+                        Can I update my card details? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseSix6" class="collapse" role="tabpanel" aria-labelledby="headingSix6" data-parent="#accordionEx">
+                    <div class="card-body elegant-color white-text">
+                      Yes. Go to the billing section of your dashboard and update your payment information.
                     </div>
                   </div>
                   <!-- Card body -->
